--- a/android-basics-kotlin-lemonade-app-main/app/src/main/res/layout/activity_main.xml
+++ b/android-basics-kotlin-lemonade-app-main/app/src/main/res/layout/activity_main.xml
@@ -36,11 +36,15 @@
 
     <ImageView
         android:id="@+id/image_lemon_state"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="323dp"
+        android:layout_height="320dp"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8"
+        tools:srcCompat="@drawable/lemon_tree"
+        android:contentDescription="@string/LemonTree" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
