--- a/android-basics-kotlin-cupcake-app-starter/app/src/main/res/layout/fragment_flavor.xml
+++ b/android-basics-kotlin-cupcake-app-starter/app/src/main/res/layout/fragment_flavor.xml
@@ -109,16 +109,30 @@
                 tools:text="Subtotal $5.00" />
 
             <Button
+                android:id="@+id/cancel_button"
+                android:text="@string/cancel"
+                android:onClick="@{() -> flavorFragment.cancelOrder()}"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/side_margin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/next_button"
+                app:layout_constraintTop_toTopOf="@id/next_button"
+                />
+
+            <Button
                 android:id="@+id/next_button"
+                android:text="@string/next"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/side_margin"
-                android:text="@string/next"
                 android:onClick="@{() -> flavorFragment.goToNextScreen()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/cancel_button"
                 app:layout_constraintTop_toBottomOf="@id/subtotal" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
