--- a/android-basics-kotlin-cupcake-app-starter/app/src/main/res/layout/fragment_summary.xml
+++ b/android-basics-kotlin-cupcake-app-starter/app/src/main/res/layout/fragment_summary.xml
@@ -138,7 +138,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/side_margin"
                 android:text="@string/send"
-                android:onClick="@{() -> summaryFragment.sendOrder()}"/>
+                android:onClick="@{() -> summaryFragment.sendOrder()}" />
+
+            <Button
+                android:id="@+id/cancel_button"
+                style="?attr/materialButtonOutlinedStyle"
+                android:text="@string/cancel"
+                android:onClick="@{() -> summaryFragment.cancelOrder()}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_between_elements"/>
 
         </LinearLayout>
     </ScrollView>
